compiler/tests/en/errors/const_div_zero.salam
// EXPECT: E021
func main:
    x := 10 / 0
    println x
end
